fix right white padding on mobile devices

--- a/vocativ-darknet-microsite/client/styles/card.scss
+++ b/vocativ-darknet-microsite/client/styles/card.scss
@@ -11,7 +11,7 @@
 
       // on mobile, stretch to full screen width
       @include bp-under(breakpoint(medium)) {
-        position: relative;
+        position: absolute;
         width: 100vw !important;
         left: -1rem;
       }
