--- a/vocativ-darknet-microsite/client/styles/episodeslibrary.scss
+++ b/vocativ-darknet-microsite/client/styles/episodeslibrary.scss
@@ -30,7 +30,7 @@ $headerDividerColor: $DARKISHGRAY;
 
           // on mobile, stretch to full screen width
           @include bp-under(breakpoint(medium)) {
-            position: relative;
+            position: absolute;
             width: 100vw !important;
             left: -1em;
           }
